tests/snapshots/regression/semantic_types__patterns__non_exhaustive_bool_error.snap
---
source: tests/integration/regression_snapshots.rs
---
$ flux --no-cache tests/fixtures/semantic_types/patterns/non_exhaustive_bool_error.flx
exit_code: 1

[ 1 of 12] Compiling  Assert
[ 2 of 12] Compiling  Debug
[ 3 of 12] Compiling  Array
[ 4 of 12] Compiling  List
[ 5 of 12] Compiling  Either
[ 6 of 12] Compiling  IO
[ 7 of 12] Compiling  Math
[ 8 of 12] Compiling  Numeric
[ 9 of 12] Compiling  Option
[10 of 12] Compiling  Primops
[11 of 12] Compiling  String
• 1 error • tests/fixtures/semantic_types/patterns/non_exhaustive_bool_error.flx
error[E015]: Non-Exhaustive Match

Match is not exhaustive: 1 missing pattern.

  tests/fixtures/semantic_types/patterns/non_exhaustive_bool_error.flx:3:5
  |
3 |     match flag {
  |     ^^^^^^^^^^^^
4 |         false -> 0,
  | ^^^^^^^^^^^^^^^^^^^
5 |     }
  | ^^^^^

Hint:
  Add the missing pattern(s) or an unguarded `_ -> ...` catch-all.
